--- a/views/index.ejs
+++ b/views/index.ejs
@@ -224,7 +224,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm text-center">
-						<a class="btn btn-sm btn-discord mb-3" href="//discord.gg/SNZNMvk">
+						<a class="btn btn-sm btn-discord mb-3" href="//discord.gg/M4GBpex">
 							<img src="images/discord_white.svg"> Our Discord
 						</a>
 						<p>Join discord and give us a shout in the lobby</p>
