Corrected footer, added header for journal table

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -9,7 +9,7 @@
 </div>
 <% } %>
 	<footer class="p-3 text-center">
-		<span class="d-block d-md-inline">Member corp of <a href="//evemaps.dotlan.net/alliance/Test_Alliance_Please_Ignore">Test Alliance Please Ignore</a></span>
+		<span class="d-block d-md-inline">Member corp of <a href="//evemaps.dotlan.net/alliance/Initiative_Mercenaries">Initiative Mercenaries</a></span>
 		| <strong>&copy; Therapy. 2018</strong> All rights reserved.<br>
 		<a href="https://www.eveonline.com/">EVE Online</a>&reg; and <a href="https://www.ccpgames.com/">CCP</a>&reg; and all related logos and other elements are trademarks of CCP hf.<br>
 		Their use is strictly fair use in course of playing EvE Online, and are not for profit.
