Several UI corrections, added assets page, updated typeIds and groupIDs files

--- a/partials/dashboardNav.ejs
+++ b/partials/dashboardNav.ejs
@@ -3,7 +3,7 @@
 		<div class="col d-flex text-center justify-content-around flex-wrap">
 			<% if( locals.char ) { %>
 			<a class="m-2" href="/dashboard/<%= char.CharacterID %>/">Dashboard</a>
-			<!---<a class="m-2" href="/dashboard/<%= char.CharacterID %>/assets">Assets</a>--->
+			<a class="m-2" href="/dashboard/<%= char.CharacterID %>/assets">Assets</a>
 			<a class="m-2" href="/dashboard/<%= char.CharacterID %>/contacts">Contacts</a>
 			<a class="m-2" href="/dashboard/<%= char.CharacterID %>/history">Corp History</a>
 			<a class="m-2" href="/dashboard/<%= char.CharacterID %>/journal">Journal</a>
