--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
 			height: 316,              // Player height (in px)
 			playerVars: {
 				listType: 'playlist',
-				list: 'PLxPfxB4EOIbHRP8HF2YEQp6s7Nuc8HGuI',
+				list: 'PL1nY3Ou1tu2IOntqhoid7aEuseJNypfcv', //'PLxPfxB4EOIbHRP8HF2YEQp6s7Nuc8HGuI',
 				autoplay: 1,        // Auto-play the video on load
 				controls: 0,        // Show pause/play buttons in player
 				showinfo: 0,        // Hide the video title
