removing unnecessary script / removing btn to remove alts

--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -80,7 +80,7 @@
 						<td class="sm p-0"></td>
 						<td class="sm p-0"><img src="//image.eveonline.com/Character/<%= alt.CharacterID %>_32.jpg"></td>
 						<td class="text-left"><a href="/dashboard/<%= alt.CharacterID %>"><%= alt.CharacterName %></a></td>
-						<td class="text-left" style="width: 1px;"><button class="btn btn-sm btn-outline-danger" name="removeAlt" value="<%= alt._id %>">Remove</button></td>
+						<!--<td class="text-left" style="width: 1px;"><button class="btn btn-sm btn-outline-danger" name="removeAlt" value="<%= alt._id %>">Remove</button></td>-->
 					</tr>
 					<% }
 					} else { %>
