--- a/views/leadership/krabnomicon.ejs
+++ b/views/leadership/krabnomicon.ejs
@@ -171,7 +171,7 @@
 	store.pilots 	= given.pilots;
 	store.rocks 	= given.rocks;
 
-	console.log(store.pilots);
+	console.log(given);
 
 	hooks.minedTable = document.getElementById('mined-body-hook');
 
