fixing nav on krabacus

--- a/views/leadership/krabnomicon.ejs
+++ b/views/leadership/krabnomicon.ejs
@@ -77,9 +77,9 @@
 	<div class="row" v-cloak>
 		<div class="col-sm-12 col-md">
 			<div class="d-flex justify-content-between align-items-center mb-1">
-				<a class="btn btn-sm btn-dark" href="/leadership/krabnomicon/<%= last[0] %>/<%= MONTH_DESCRIPTION[ last[1] ] %>">Last Month</a>
+				<a class="btn btn-sm btn-dark" href="/krabacus/<%= last[0] %>/<%= MONTH_DESCRIPTION[ last[1] ] %>">Last Month</a>
 				<h3><%= MONTH_DESCRIPTION[ month ] %> <%= year %></h3>
-				<a class="btn btn-sm btn-dark" href="/leadership/krabnomicon/<%= next[0] %>/<%= MONTH_DESCRIPTION[ next[1] ] %>">Next Month</a>
+				<a class="btn btn-sm btn-dark" href="/krabacus/<%= next[0] %>/<%= MONTH_DESCRIPTION[ next[1] ] %>">Next Month</a>
 			</div>
 			<table class="table table-sm table-v-align-middle text-nowrap">
 				<thead>
